# default_cpp_project

./: .gitignore  README.md  project_manager.py
scripts/: CMakeLists.txt
src/: main.cpp
